<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp" >

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@android:color/transparent"
        android:paddingLeft="24dp"
            />



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="28dp"
        android:layout_margin="16dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/md_theme_light_primaryContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="28dp"
            android:textColor="@color/md_theme_light_shadow">

            <TextView
                android:id="@+id/SignUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/playfair_display"
                android:text="@string/crearCuenta"
                android:textColor="@color/md_theme_dark_onTertiary"
                android:textSize="60sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label"


                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mailInput"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_light_shadow" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_light_shadow" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surnameLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_light_shadow" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:textColor="@color/md_theme_light_shadow" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/questionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/questionLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/questionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:textColor="@color/md_theme_light_shadow" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/interests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/option1"
                    android:textColor="@color/md_theme_light_shadow" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/option2"
                    android:textColor="@color/md_theme_light_shadow" />

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/option3"
                    android:textColor="@color/md_theme_light_shadow" />

                <RadioButton
                    android:id="@+id/option4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/option4"
                    android:textColor="@color/md_theme_light_shadow" />

            </RadioGroup>

            <Button
                android:id="@+id/createAccount"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonSignUp"
                android:textColor="@color/md_theme_light_shadow" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>